# crewai-Tour_planner_guide

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py  test.ipynb
agents/: cityexpert_agent.py  citypanner_agent.py  travel_concierge_agent.py
tasks/: city_planner_task.py  local_guide_task.py  travel_concierge_task.py
tools/: calculator_tool.py  webscraping_tool.py  websearch_tool.py
